--- a/.unibeautifyrc.yml
+++ b/.unibeautifyrc.yml
@@ -9,7 +9,7 @@ JavaScript:
   brace_style: collapse
   break_chained_methods: false
   comma_first: true
-  end_with_newline: false
+  end_with_newline: true
   indent_comments: false
   indent_size: 2
   indent_style: space
@@ -21,3 +21,18 @@ JavaScript:
   preserve_newlines: false
   quotes: single
   remove_trailing_whitespace: true
+HTML:
+  beautifiers:
+    - Pretty Diff
+    - JS-Beautify
+  force_indentation: true
+  indent_comments: true
+  indent_inner_html: true
+  indent_scripts: keep
+  indent_size: 3
+  indent_style: space
+  newline_before_tags:
+    - head
+    - body
+  preserve_newlines: false
+  wrap_attributes: force-aligned
